--- a/app/views/ideas/_form.html.haml
+++ b/app/views/ideas/_form.html.haml
@@ -7,13 +7,14 @@
       %ul
         - @idea.errors.full_messages.each do |message|
           %li= message
-  .field
-    = f.label :title
-    %br/
-    = f.text_field :title
-  .field
-    = f.label :body
-    %br/
-    = f.text_area :body
-  .actions
-    = f.submit
+  .col-xs-12.col-md-8
+    .field.form-group
+      = f.label :title
+      %br/
+      = f.text_field :title, class: "form-control"
+    .field.form-group
+      = f.label :body
+      %br/
+      = f.text_area :body, class: "form-control"
+    .actions
+      = f.submit class: "btn btn-info"
