--- a/app/views/ideas/edit.html.haml
+++ b/app/views/ideas/edit.html.haml
@@ -1,5 +1,8 @@
-%h1 Editing idea
+%h1 
+  Editing 
+  #{@idea.title}
+%br
+.row.col-md-12  
+  = link_to 'Back', ideas_path, class: "btn btn-warning"
 = render 'form'
-= link_to 'Show', @idea
-|
-= link_to 'Back', ideas_path
+
