--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,14 +1,14 @@
-%h1 Listing ideas
-%table
-  %thead
-    %tr
-      %th Title
-      %th Body
-      %th{colspan: "3"}
-  %tbody
-    - @ideas.each do |idea|
-      %tr
-        %td= link_to idea.title, idea
-        %td= idea.body
+.row
+  .col-xs-12.col-md-10.col-md-offset-1
+    %h1 Idea List
+    = link_to 'New Idea', new_idea_path, class: "btn btn-primary"
 %br
-= link_to 'New Idea', new_idea_path
+.row
+  .col-xs-12.col-md-10.col-md-offset-1
+    - @ideas.each do |idea|
+      .row.well
+        %div
+          %h2 
+            #{link_to idea.title, idea}
+          %p= truncate(idea.body, length: 500)
+
