Add relations between users, comments, and ideas and added comments create and destroy to idea show page

--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -10,5 +10,8 @@
         %div
           %h2 
             #{link_to idea.title, idea}
+            %small
+              By 
+              #{idea.user.full_name}
           %p= truncate(idea.body, length: 500)
 
