--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -7,11 +7,19 @@
   .col-xs-12.col-md-10.col-md-offset-1
     - @ideas.each do |idea|
       .row.well
-        %div
-          %h2 
-            #{link_to idea.title, idea}
-            %small
-              By 
-              #{idea.user.full_name}
-          %p= truncate(idea.body, length: 500)
+        %h2 
+          = link_to idea.title, idea
+          %small
+            By 
+            #{idea.user.full_name}
+        %p= truncate(idea.body, length: 500)
+        %hr
+        .row
+          - if idea.user != current_user
+            - if idea.joined_by?(current_user)
+              = link_to "Joined", member_path({idea_id: idea.id, id: idea.members.where(user: current_user).first.id } ), method: :delete, data: {confirm: "Are you sure you want to leave this Idea?"}, class: "btn btn-default"
+            - else
+              = link_to "Join", members_path({idea_id: idea.id}), method: :post, class: "btn btn-default"
+
+
 
