--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,7 @@
           %li= link_to "Home", root_path
         %ul.nav.navbar-nav.pull-right
           - if user_signed_in?
+            %li= link_to "Hello #{current_user.full_name}", edit_user_registration_path
             %li= link_to "Sign Out", destroy_user_session_path, method: :delete
           - else
             %li= link_to "Sign In", new_user_session_path
