--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -1,8 +1,20 @@
 .row
   .col-xs-12.col-md-10.col-md-offset-1
     %h1 Idea List
-    = link_to 'New Idea', new_idea_path, class: "btn btn-primary"
+    - if user_signed_in?
+      = link_to 'New Idea', new_idea_path, class: "btn btn-primary", id: "new-idea-btn"
 %br
+.row#create-form.well{style: "display: none;"}
+  .col-md-10.col-md-offset-1.col-xs-12
+    %h2 Create New Idea
+    = form_for @idea do |f|
+      .form-group
+        = f.label :title
+        = f.text_field :title, class: "form-control"
+      .form-group
+        = f.label :body
+        = f.text_area :body, class: "form-control"
+      = f.submit "Post Idea", class: "btn btn-primary"
 .row
   .col-xs-12.col-md-10.col-md-offset-1
     - @ideas.each do |idea|
@@ -15,15 +27,16 @@
         %p= truncate(idea.body, length: 500)
         %hr
         .row
-          - if idea.user != current_user
-            - if idea.joined_by?(current_user)
-              = link_to "Joined", member_path({idea_id: idea.id, id: idea.members.where(user: current_user).first.id } ), method: :delete, data: {confirm: "Are you sure you want to leave this Idea?"}, class: "btn btn-success"
-            - else
-              = link_to "Join", members_path({idea_id: idea.id}), method: :post, class: "btn btn-default"
-            - if idea.liked_by?(current_user)
-              = link_to "Liked", like_path({idea_id: idea.id, id: idea.likes.where(user: current_user).first.id } ), method: :delete, class: "btn btn-primary"
-            - else
-              = link_to "Like", likes_path({idea_id: idea.id}), method: :post, class: "btn btn-default"
+          - if user_signed_in?
+            - if idea.user != current_user
+              - if idea.joined_by?(current_user)
+                = link_to "Joined", member_path({idea_id: idea.id, id: idea.members.where(user: current_user).first.id } ), method: :delete, data: {confirm: "Are you sure you want to leave this Idea?"}, class: "btn btn-success"
+              - else
+                = link_to "Join", members_path({idea_id: idea.id}), method: :post, class: "btn btn-default"
+              - if idea.liked_by?(current_user)
+                = link_to "Liked", like_path({idea_id: idea.id, id: idea.likes.where(user: current_user).first.id } ), method: :delete, class: "btn btn-primary"
+              - else
+                = link_to "Like", likes_path({idea_id: idea.id}), method: :post, class: "btn btn-default"
           .pull-right{style: "margin-right: 4px;"}
             Members:          
             = idea.members.count
