--- a/app/views/ideas/_form.html.haml
+++ b/app/views/ideas/_form.html.haml
@@ -16,5 +16,9 @@
       = f.label :body
       %br/
       = f.text_area :body, class: "form-control"
+    .field.form-group
+      = f.label :image
+      %br/
+      = f.file_field :image, class: "form-control"
     .actions
       = f.submit class: "btn btn-info"
