--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -14,6 +14,9 @@
       .form-group
         = f.label :body
         = f.text_area :body, class: "form-control"
+      .form-group
+        = f.label :image
+        = f.file_field :image, class: "form-control"
       = f.submit "Post Idea", class: "btn btn-primary"
 .row
   .col-xs-12.col-md-10.col-md-offset-1
